--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
     "sequelize": "^6.37.7"
   }
 }
