--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "server",
+  "name": "projet_pp",
   "version": "1.0.0",
-  "description": "Louvain propre",
-  "scripts": {},
-  "author": "Vincent Toscas",
-  "license": "ISC",
-  "private": true,
+  
+  "jest":{
+    "verbose":true
+  },
+
+  "scripts": {
+    "test":"jest"
+  },
+    "private": true,
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
